# code_se

./: CMakeLists.txt  Makefile  README  README.md
ApplicationA/src/: Makefile  parse_json.c
ApplicationB/inc/: SendResult.h
ApplicationB/src/: Makefile  SendResult.c
Client/inc/: parse_json.h
Client/src/: parse_json.c
Server/inc/: SendResult.h
